@@ -1,7 +1,8 @@
-package com.xicheng.jvm.chapter03.code;
+package com.xicheng.jvm.chapter03.code.code062;
 
 /**
- * 并没有打印GC日志
+ * jvm参数
+ * -XX:+PrintGCDetails
  *
  * @author xichengxml
  * @date 2019-08-17 08:16
@@ -15,7 +16,7 @@ public class ReferenceCoutingGC {
     /**
      * 这个成员变量的作用是占用内存，便于在GC日志中查看垃圾回收情况
      */
-    private byte[] bigSize = new byte[2 * SIZE_1MB];
+    private byte[] bigSize = new byte[4 * SIZE_1MB];
 
     public static void main(String[] args) {
         ReferenceCoutingGC referenceA = new ReferenceCoutingGC();
